Original commit of core domain classes and some associated events

--- a/initial/build.gradle
+++ b/initial/build.gradle
@@ -1,5 +1,14 @@
 apply plugin: 'java'
 
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    runtime 'org.springframework:spring-core:3.2.3.RELEASE'
+    testCompile 'junit:junit:4.+'
+}
+
 task wrapper(type: Wrapper) {
     gradleVersion = '1.6'
 }
