Moving tests into being unit tests

--- a/initial/build.gradle
+++ b/initial/build.gradle
@@ -6,7 +6,9 @@ repositories {
 
 dependencies {
     runtime 'org.springframework:spring-core:3.2.3.RELEASE'
+
     testCompile 'junit:junit:4.+'
+    testCompile "org.mockito:mockito-all:1.9.5"
 }
 
 task wrapper(type: Wrapper) {
