--- a/step1/build.gradle
+++ b/step1/build.gradle
@@ -7,10 +7,15 @@ repositories {
 dependencies {
     compile 'org.springframework:spring-core:3.2.3.RELEASE'
     compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
+    compile 'com.jayway.jsonpath:json-path:0.8.1'
+    compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
 
+    testCompile 'com.jayway.jsonpath:json-path-assert:0.8.1'
     testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
     testCompile 'junit:junit:4.+'
     testCompile "org.mockito:mockito-all:1.9.5"
+
+    testCompile 'javax.servlet:servlet-api:2.5'
 }
 
 task wrapper(type: Wrapper) {
