--- a/step1/build.gradle
+++ b/step1/build.gradle
@@ -9,6 +9,8 @@ dependencies {
     compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
     compile 'com.jayway.jsonpath:json-path:0.8.1'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
+    compile 'org.slf4j:slf4j-api:1.7.5'
+    runtime 'org.slf4j:slf4j-jdk14:1.7.5'
 
     testCompile 'com.jayway.jsonpath:json-path-assert:0.8.1'
     testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
