--- a/page5/build.gradle
+++ b/page5/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     compile 'org.springframework:spring-core:3.2.3.RELEASE'
     compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
     compile 'com.jayway.jsonpath:json-path:0.8.1'
+    compile 'org.springframework.security:spring-security-web:3.1.4.RELEASE'
+    compile 'org.springframework.security:spring-security-core:3.1.4.RELEASE'
+    compile 'org.springframework.security:spring-security-config:3.1.4.RELEASE'
 
     compile 'org.slf4j:slf4j-api:1.7.5'
     runtime 'org.slf4j:slf4j-jdk14:1.7.5'
