--- a/page5/src/main/webapp/WEB-INF/web.xml
+++ b/page5/src/main/webapp/WEB-INF/web.xml
@@ -21,4 +21,22 @@
         <servlet-name>webservice</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath*:com/yummynoodlebar/config/security-context.xml</param-value>
+    </context-param>
 </web-app>
