--- a/page5/build.gradle
+++ b/page5/build.gradle
@@ -24,7 +24,7 @@ buildscript {
 
 repositories {
     mavenCentral()
-    maven { url 'http://repo.springsource.org/snapshot'}
+    maven { url 'http://repo.springsource.org/milestone/'}
 }
 
 dependencies {
@@ -38,9 +38,10 @@ dependencies {
     compile 'org.springframework:spring-core:3.2.3.RELEASE'
     compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
     compile 'com.jayway.jsonpath:json-path:0.8.1'
-    compile 'org.springframework.security:spring-security-web:3.1.4.RELEASE'
-    compile 'org.springframework.security:spring-security-core:3.1.4.RELEASE'
-    compile 'org.springframework.security:spring-security-config:3.1.4.RELEASE'
+
+    compile 'org.springframework.security:spring-security-web:3.2.0.M2'
+    compile 'org.springframework.security:spring-security-core:3.2.0.M2'
+    compile 'org.springframework.security:spring-security-config:3.2.0.M2'
 
     compile 'org.slf4j:slf4j-api:1.7.5'
     runtime 'org.slf4j:slf4j-jdk14:1.7.5'
