--- a/3/build.gradle
+++ b/3/build.gradle
@@ -1,23 +1,33 @@
 apply plugin: 'war'
 apply plugin: 'tomcat'
 apply plugin: 'java'
+apply plugin: 'propdeps'
+apply plugin: 'propdeps-maven'
+apply plugin: 'propdeps-idea'
+apply plugin: 'propdeps-eclipse'
 
 buildscript {
   repositories {
     mavenCentral()
+    maven {
+      url "http://download.java.net/maven/2"
+    }
+    maven { url 'http://repo.springsource.org/plugins-release' }
   }
 
   dependencies {
     classpath 'org.gradle.api.plugins:gradle-tomcat-plugin:0.9.8'
+    classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.1'
   }
 }
+
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    def tomcatVersion = '7.0.11'
+    def tomcatVersion = '7.0.42'
     tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
             "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}"
     tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
@@ -34,12 +44,13 @@ dependencies {
     runtime 'com.fasterxml.jackson.core:jackson-databind:2.2.2'
     runtime 'javax.xml.bind:jaxb-api:2.2.9'
 
+    provided 'javax.servlet:javax.servlet-api:3.0.1'
+
     testCompile 'com.jayway.jsonpath:json-path-assert:0.8.1'
     testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
     testCompile 'junit:junit:4.+'
     testCompile "org.mockito:mockito-all:1.9.5"
 
-    testCompile 'javax.servlet:servlet-api:2.5'
 }
 
 task wrapper(type: Wrapper) {
