Require slightly richer initial state to fit with flow

--- a/initial/build.gradle
+++ b/initial/build.gradle
@@ -1,13 +1,44 @@
 apply plugin: 'java'
 
+//these create the 'provided' scope, mainly for the servlet dependency
+apply plugin: 'propdeps'
+apply plugin: 'propdeps-maven'
+apply plugin: 'propdeps-idea'
+apply plugin: 'propdeps-eclipse'
+
+buildscript {
+  repositories {
+    mavenCentral()
+    maven {
+      url "http://download.java.net/maven/2"
+    }
+    maven { url 'http://repo.springsource.org/plugins-release' }
+  }
+
+  dependencies {
+    classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.1'
+  }
+}
+
 repositories {
     mavenCentral()
+    maven { url 'http://repo.springsource.org/milestone/'}
 }
 
 dependencies {
     compile 'org.springframework:spring-core:3.2.3.RELEASE'
     compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
 
+    provided 'javax.servlet:javax.servlet-api:3.0.1'
+
+    runtime 'com.fasterxml.jackson.core:jackson-core:2.2.2'
+    runtime 'com.fasterxml.jackson.core:jackson-databind:2.2.2'
+
+    compile 'org.slf4j:slf4j-api:1.7.5'
+    runtime 'org.slf4j:slf4j-jdk14:1.7.5'
+
+    testCompile 'com.jayway.jsonpath:json-path:0.8.1'
+    testCompile 'com.jayway.jsonpath:json-path-assert:0.8.1'
     testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
     testCompile 'junit:junit:4.+'
     testCompile "org.mockito:mockito-all:1.9.5"
